--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | QR code component</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main>
-      <img class="qr-code" alt="qr-code" src="/images/image-qr-code.png">
+      <img class="qr-code" alt="qr-code" src="images/image-qr-code.png">
       <p class="bold">Improve your front-end skills by building projects</p>
       <p class="regular">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
